# mirexplorer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  example_audio_licenses.json  pyproject.toml
backend/: __init__.py  analyse.py  chat.py  crud.py  extensions.py  routes.py  tasks.py
frontend/: audioRecorder.jsx  index.html  main.js  main.jsx  package-lock.json  package.json  tailwind.config.js  vite.config.js  webpack.config.js
frontend/src/: dropzone.jsx  explorerAnalysis.jsx  explorerShared.jsx  explorerTutorial.jsx  explorerUI.jsx  fonts.css  main.js  styles.css  theme.css
frontend/static/example_audio/: precached_features.json
frontend/templates/: about.html  explorer.html  index.html  layout.html
mirexplorer/: app.py
mirexplorer/templates/: contact.html  index.html
src/mirexplorer_analysis/: __init__.py  __main__.py  analyse.py  app.py  extensions.py  routes.py
src/mirexplorer_audio/: __init__.py  __main__.py  app.py  forms.py  storage.py  tasks.py  upload_routes.py
src/mirexplorer_chat/: __init__.py  __main__.py  app.py  chat.py  routes.py
src/mirexplorer_common/: __init__.py  paths.py
src/mirexplorer_gateway/: __init__.py  app.py  extensions.py  routes.py
templates/: explorer.html  index.html  layout.html
test/: test_analysis_service.py  test_audio_service.py  test_chat_service.py  test_gateway_service.py  test_imports.py
