[tool.poetry]
name = "mirexplorer"
version = "0.1"
authors = ["Huw Cheston <h.cheston@qmul.ac.uk>", "Iran Roman <i.roman@qmul.ac.uk>"]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-wtf = "*"
librosa = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"