[tool.poetry]
name = "backend"
version = "0.1"
authors = ["Huw Cheston <h.cheston@qmul.ac.uk>", "Iran Roman <i.roman@qmul.ac.uk>"]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-wtf = "*"
flask-vite = "*"
librosa = "*"
apscheduler = "*"
loguru = "*"
pydub = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"